

changelog of snapshot <21w09a> released on <?> targeting <21w17a>
    Test Framework:
        - tweaked some stuff

    Commands:
        - added /chunk delete all command
        - added /chunk dumpdatadebug [all] command

    World generation:
        - added debug helper code for dumping the map structure in image format


changelog of snapshot 21w17a released on 28.04.2021 targeting 21w17a
    This snapshot breaks again compatibility, mainly the following:
        - reworked how the world generates
        - reworked how the world stores data maps of chunks (e.g. heightmaps)
        - broke with this world loading compatibility, did not add a DataFixer for it, so old worlds cannot be
            loaded
        - rewritten command system from ground
        - refactored some important bits. This breaks block construction & rendering

    Commands:
        - rewritten how commands work internally
        - a lot of migrations
        - added /worldgendebug command
        - moved some commands around, removed some, added some new nodes to some

    World Generation:
        - added async world generation process
        - added access system from other processes to the current world
        - reworked how data maps of chunks are done
        - fixed world generator for debug worlds
        - added sunflower plains biome

    Fluids:
        - implemented basic fluid API, including:
            - a fluid class
            - a fluid stack
            - a fluid item container
            - a fluid block base class

    Launch options:
        - added options to disable mod loader, data pack loader, and resource pack loader
        - boosted server load cycle even more

    Build System:
        - major fixes to the system

    Rendering:
        - some fixes around rotations in block models

    Event system:
        - major improvements, including RAM usage, call times, ...
        - fixed function unsubscribing never working

