@@ -1601,4 +1601,5 @@ R   [uuk]: improved world serialization API
 [uuk]: added system to output chunk data maps to files
 [uuk]: fixed /chunk generate area command crashing due to wrong argument parsing
 [uuk]: added /chunk delete all command
+[uuk]: removed APIManager
 
